Fixed alignment of bio text

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ p.biography {
   margin-top: 250px;
   margin-left: 50px;
   margin-right: 50px;
-  text-align: center;
+  text-align: left;
   
 }
 
